--- a/src/app/coches/inicio/inicio.component.html
+++ b/src/app/coches/inicio/inicio.component.html
@@ -9,8 +9,12 @@
   <section class="page-section" id="about">
     <div class="container">
         <div class="text-center">
-            <h2 class="section-heading text-uppercase">About</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h2 class="section-heading text-uppercase">Sobre Mi</h2>
+            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae reprehenderit cum, cumque natus similique delectus suscipit odio sunt quos ad nam in nobis tempora, sint doloribus aut architecto, necessitatibus dolor. <br>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur sint fuga aliquid quis similique voluptatibus impedit placeat pariatur amet aliquam, aspernatur velit reiciendis iste, nihil nesciunt a perferendis. Porro, illum? <br>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur vero sed labore quas quisquam. Vitae modi doloremque corporis fuga maiores doloribus! Numquam in omnis reiciendis ratione vero nam neque molestiae!
+            
+            </h3>
         </div>
       </div>
         
