--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,61 +1,9 @@
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-  <div class="container">
-      <a class="navbar-brand" href="#page-top"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          Menu
-          <i class="fas fa-bars ms-1"></i>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-              <li class="nav-item"><a class="nav-link" href="#services">Caracteristicas</a></li>
-              <li class="nav-item"><a class="nav-link" href="#portfolio">Coches</a></li>
-              <li class="nav-item"><a class="nav-link" href="#about">Sobre mi</a></li>
-              <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
-              <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-          </ul>
-      </div>
-  </div>
-</nav>
-<!-- Masthead-->
-<header class="masthead">
-  <div class="container">
-      <div class="masthead-subheading">pagina web de coches</div>
-      <div class="masthead-heading text-uppercase">coches chulos</div>
-      <a class="btn btn-danger btn-xl text-uppercase" href="#services">Saber más de los coches</a>
-  </div>
-</header>
+<app-cabecera></app-cabecera>
 <!-- Services-->
 <app-inicio></app-inicio>
 <!-- Footer-->
-<footer class="footer py-4">
-  <div class="container">
-      <div class="row align-items-center">
-          <div class="col-lg-4 text-lg-start">Copyright &copy; Your Website 2023</div>
-          <div class="col-lg-4 my-3 my-lg-0">
-              <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-              <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-              <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-          </div>
-          <div class="col-lg-4 text-lg-end">
-              <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
-              <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
-          </div>
-      </div>
-  </div>
-</footer>
-<!-- Portfolio Modals-->
-<!-- Portfolio item 1 modal popup-->
-<app-coche1></app-coche1>
-<!-- Portfolio item 2 modal popup-->
-<app-coche2></app-coche2>
-<!-- Portfolio item 3 modal popup-->
-<app-coche3></app-coche3>
-<!-- Portfolio item 4 modal popup-->
-<app-coche4></app-coche4>
-<!-- Portfolio item 5 modal popup-->
-<app-coche5></app-coche5>
-<!-- Portfolio item 6 modal popup-->
-<app-coche6></app-coche6>
+<app-pie></app-pie>
+<app-modelos-coches></app-modelos-coches>
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Core theme JS-->
