--- a/src/styles.css
+++ b/src/styles.css
@@ -74,8 +74,8 @@
   --bs-border-radius-xl: 1rem;
   --bs-border-radius-2xl: 2rem;
   --bs-border-radius-pill: 50rem;
-  --bs-link-color: #ffc800;
-  --bs-link-hover-color: #cca000;
+  --bs-link-color: #ff0000;
+  --bs-link-hover-color: #cc1f00;
   --bs-code-color: #d63384;
   --bs-highlight-bg: #fff4cc;
 }
